Upated mixin - added default color values, updated readme file

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ h1 {
 
 .progress_bar {
     display: none;
-    background-color: #f7502a;
+    background-color: #000;
     height: 2px;
     left: 0;
     position: fixed;
